# jobs-scraper

./: .env  .gitignore  README.md  pyproject.toml  verify_postgres_connection.py
.github/workflows/: ci.yml
src/: app.py
src/core/: config.py  enums.py  factory.py  models.py  protocols.py  rate_limiter.py  repositories.py  schemas.py
src/core/utils/: browser.py
src/seek/: extractor.py  scraper.py
test/: test_seek.py
